plugins/source/src/syntax/injection/snapshots/nyne_source__syntax__injection__tests__empty_content_only_jinja2_directives.snap
---
source: plugins/source/src/syntax/injection/tests.rs
expression: file
---
[
    Fragment {
        name: "preamble",
        kind: Preamble,
        span: FragmentSpan {
            byte_range: 0..57,
            full_span: 0..57,
            name_byte_offset: 0,
        },
        signature: None,
        visibility: None,
        metadata: None,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
