plugins/source/src/syntax/injection/snapshots/nyne_source__syntax__injection__tests__markdown_in_jinja2_produces_both_layers.snap
---
source: plugins/source/src/syntax/injection/tests.rs
expression: file
---
[
    Fragment {
        name: "title",
        kind: Symbol(
            Module,
        ),
        span: FragmentSpan {
            byte_range: 0..46,
            full_span: 0..46,
            name_byte_offset: 9,
        },
        signature: Some(
            "{% block title %}",
        ),
        visibility: None,
        metadata: None,
        children: [],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "Hello World",
        kind: Section {
            level: 1,
        },
        span: FragmentSpan {
            byte_range: 18..32,
            full_span: 18..32,
            name_byte_offset: 18,
        },
        signature: None,
        visibility: None,
        metadata: Some(
            Document {
                index: 0,
            },
        ),
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
