plugins/source/src/syntax/injection/snapshots/nyne_source__syntax__injection__tests__preserves_inner_children.snap
---
source: plugins/coding/src/syntax/injection/tests.rs
assertion_line: 112
expression: file
---
[
    Fragment {
        name: "config",
        kind: Symbol(
            Module,
        ),
        byte_range: 0..73,
        signature: Some(
            "{% block config %}",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 9,
        children: [],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "server",
        kind: Symbol(
            Module,
        ),
        byte_range: 19..59,
        signature: Some(
            "[server]",
        ),
        visibility: None,
        metadata: None,
        name_byte_offset: 19,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
