plugins/source/src/syntax/injection/snapshots/nyne_source__syntax__injection__tests__toml_in_jinja2_decomposes_tables.snap
---
source: plugins/source/src/syntax/injection/tests.rs
expression: file
---
[
    Fragment {
        name: "database",
        kind: Symbol(
            Module,
        ),
        span: FragmentSpan {
            byte_range: 29..57,
            full_span: 29..57,
            name_byte_offset: 29,
        },
        signature: Some(
            "[database]",
        ),
        visibility: None,
        metadata: None,
        children: [],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "database",
        kind: Symbol(
            Module,
        ),
        span: FragmentSpan {
            byte_range: 68..95,
            full_span: 68..95,
            name_byte_offset: 68,
        },
        signature: Some(
            "[database]",
        ),
        visibility: None,
        metadata: None,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
